--- a/GomokuBlazor/Pages/Index.razor
+++ b/GomokuBlazor/Pages/Index.razor
@@ -6,6 +6,6 @@
   <SideBar />
 </div>
 <div class="icons">
-  <img src="" alt="React" class="icon react-icon" />
-  <a href="https://github.com/yuma140902/gomoku-react"><img src="" alt="Github" class="icon" /></a>
+  <img src="blazor.png" alt="Blazor" class="icon" />
+  <a href="https://github.com/yuma140902/gomoku-blazor"><img src="github.png" alt="Github" class="icon" /></a>
 </div>
